# ai-agents

./: 02-notebook-openai-api-basic.ipynb  README.md
01-llm-api/: README.md
01-llm-api/src/: bot.py
02-aidd/: .env.example  Makefile  README.md  pyproject.toml
02-aidd/.cursor/rules/: conventions.mdc  workflow.mdc
02-aidd/docs/: idea.md  tasklist.md  vision.md
02-aidd/src/: chat_service.py  config.py  dialog_history.py  llm_client.py  logger.py  main.py
02-aidd/src/handlers/: __init__.py  message.py  start.py
02-aidd/tests/: test_chat_service.py
03-multimodal/: .env.example  Dockerfile  README.md
03-multimodal-2/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
03-multimodal-2/docs/: idea.md  tasklist.md  vision.md
03-multimodal-2/src/tg_llm_bot/: __init__.py  __main__.py  dialog_service.py  llm_client.py  main.py  settings.py  telegram_bot.py
03-multimodal-2/tests/: test_dialog_memory.py
03-multimodal/docs/: idea.md  tasklist.md  vision.md
03-multimodal/src/: balance_report_service.py  chat_service.py  config.py  extraction_result.py  llm_client.py  short_expense_parser.py  transaction.py  transaction_store.py
03-multimodal/tests/: test_balance_report_service.py  test_chat_service.py  test_config.py  test_extraction_result.py  test_llm_client.py  test_short_expense_parser.py  test_smoke_finance_flow.py  test_transaction_store.py
04-rag-langchain/: .env.example  Makefile  README.md  pyproject.toml
04-rag-langchain-2/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.md
04-rag-langchain-2/.cursor/rules/: conventions.mdc  workflow.mdc
04-rag-langchain-2/app/: main.py
04-rag-langchain-2/app/bot/: telegram_bot.py
04-rag-langchain-2/app/config/: logging_setup.py  settings.py
04-rag-langchain-2/app/handlers/: index_commands_handler.py  message_handler.py
04-rag-langchain-2/app/llm/: openrouter_client.py
04-rag-langchain-2/app/models/: chat_message.py
04-rag-langchain-2/app/rag/: context_provider.py  corpus_loader.py  index_service.py  rag_chain.py
04-rag-langchain-2/app/services/: chat_history.py  dialog_service.py
04-rag-langchain-2/docs/: idea.md  tasklist.md  vision.md
04-rag-langchain-2/scripts/: self_check.py
04-rag-langchain-2/tests/: test_corpus_loader.py  test_index_service.py  test_rag_chain.py  test_settings.py
04-rag-langchain/.cursor/rules/: conventions.mdc
04-rag-langchain/docs/: idea.md  tasklist.md  vision.md
04-rag-langchain/src/: chat_service.py  config.py  corpus_loader.py  dialog_history.py  index_service.py  llm_client.py  main.py  rag_chain.py
04-rag-langchain/src/handlers/: __init__.py  index_commands.py  message.py
04-rag-langchain/tests/: test_chat_service.py  test_corpus_loader.py  test_index_service.py  test_llm_client.py  test_rag_chain.py  test_settings.py
(+4 files in other folders)
