[project]
name = "telegram-llm-bot"
version = "0.1.0"
description = "Telegram LLM assistant bot (MVP)"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "openai>=1.60",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
